<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical"
    android:paddingHorizontal="20sp"
    android:paddingTop="30sp"
    tools:context=".HistoryOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10sp"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:id="@+id/store_history_title"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="4"
            android:text="@string/history_order"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/change_page"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:backgroundTint="@color/light_blue"
            android:contentDescription="@string/multiple_page_change"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/store_online_close"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="20sp"
            android:backgroundTint="@color/error"
            android:text="@string/store_close"
            app:icon="@drawable/ic_baseline_clear_24" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/order_history_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />

</LinearLayout>