<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10sp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0sp"
        app:cardCornerRadius="14sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14sp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/order_no"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="No.0"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/order_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in_progress"
                    android:textColor="@color/dark_gray" />


            </LinearLayout>

            <TextView
                android:id="@+id/order_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginVertical="20sp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/order_delay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5sp"
                android:background="@drawable/outline_button"
                android:text="@string/order_delay_time" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/order_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5sp"
                android:background="@drawable/login_btn"
                android:text="@string/order_complete"
                android:textColor="@color/white" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>