<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical"
    android:paddingHorizontal="20sp"
    android:paddingTop="30sp"
    tools:context=".StoreHomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginVertical="10sp"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:id="@+id/store_home_title"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="6"
            android:text="Hello"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/home_avatar"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:layout_gravity="end"
            android:scaleType="fitCenter"
            android:src="@drawable/default_avatar"
            app:shapeAppearanceOverlay="@style/circular"
            app:strokeColor="@color/dark_gray"
            app:strokeWidth="2sp" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="10sp"
                android:background="@color/white"
                app:cardCornerRadius="10sp"
                app:cardElevation="0sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_time"
                        android:textColor="@color/dark_gray"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="5">

                        <TextView
                            android:id="@+id/open_time"
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20sp"
                            android:layout_weight="5"
                            android:text="11:00 ~ 14:00"
                            android:textColor="@color/black"
                            android:textSize="24sp" />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:background="@color/white"
                            android:contentDescription="@string/edit_open_time"
                            android:src="@drawable/ic_outline_create_24" />

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/store_home_takedayoff"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5sp"
                        android:background="@drawable/outline_button"
                        android:text="@string/today_take_day_off" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/store_home_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5sp"
                        android:background="@drawable/outline_button"
                        android:text="@string/edit_store" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5sp"
                        android:background="@drawable/login_btn"
                        android:text="@string/store_open"
                        android:textColor="@color/white" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="10sp"
                android:background="@color/white"
                app:cardCornerRadius="10sp"
                app:cardElevation="0sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_history"
                        android:textColor="@color/dark_gray"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="5">

                        <TextView
                            android:id="@+id/order_history_all"
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginStart="18sp"
                            android:layout_weight="5"
                            android:text="0 筆訂單"
                            android:textColor="@color/black"
                            android:textSize="24sp" />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:background="@drawable/round_button"
                            android:contentDescription="@string/edit_open_time"
                            android:padding="10sp"
                            android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="10sp"
                android:background="@color/white"
                app:cardCornerRadius="10sp"
                app:cardElevation="0sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/voice_hint"
                        android:textColor="@color/dark_gray"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="5">

                        <TextView
                            android:id="@+id/store_home_voice_hint"
                            android:layout_width="0sp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginStart="18sp"
                            android:layout_weight="5"
                            android:text="新訂單、餐點名稱"
                            android:textColor="@color/black"
                            android:textSize="24sp" />

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:background="@drawable/round_button"
                            android:contentDescription="@string/edit_open_time"
                            android:padding="10sp"
                            android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>